[tool.poetry]
name = "kee"
version = "0.1.0"
description = ""
authors = ["av <av@fun-box.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
pyfzf = "^0.2.2"
pyperclip = "^1.8.1"
pykeepass = {git = "https://github.com/libkeepass/pykeepass.git"}
rich = "^9.5.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.790"

[tool.poetry.scripts]
kee-find = "kee.kee_find:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
